# mapc-optimal-research

./: .gitignore  README.md  pyproject.toml
.github/workflows/: github-actions.yml
mapc_research/: plots.py
mapc_research/brute_force/: run.py
mapc_research/dcf/: run.py  run_test_scenarios.py  simple_sim.ipynb
mapc_research/dcf/plots/: backoff_plot.py  collisions_mcs_plot.py  compare_collisions.py  cw_plot.py  data_rate_plot.py  per_distance_plot.py  throughput_plot.py
mapc_research/dcf/scripts/schedules/: collision_vs_density.sh  distance.sh  run_test_scenarios.py
mapc_research/envs/: __init__.py  dataset.py  dynamic_scenario.py  dynamic_scenarios.py  scenario.py  scenario_impl.py  simulator.py  static_scenario.py  static_scenarios.py  test_scenarios.py
mapc_research/fairness/: run.py
mapc_research/mab/: default_config.json  dynamic_scenarios.py  random_agent.py  run.py  scenario.py  static_scenarios.py  tuning.py
mapc_research/plots/: __init__.py  ap_groups_histogram.py  config.py  data_rate_plot.py  data_rate_plot_combined.py  fairness_cdf_plot.py  fairness_plot.py  random_boxplots.py  random_plot.py  residential_plot.py  residential_results.py  sta_fairness_histogram.py  utils.py  worst_case_results.ipynb
mapc_research/scalability/: __init__.py  basic_config.json  cumulative_plot.py  debug.py  manage_results.ipynb  min_thr.json  residential_config.json  run.py  run_experiment.py  scalability.py  total_sum.json
mapc_research/scalability/database/: .gitignore
mapc_research/scripts/worst_case/: dcf_results.ipynb  parse_dcf_results.py  parse_mab_results.py  parse_solver_results.py
mapc_research/simulator_validation/: run.py
mapc_research/upper_bound/: dcf_baselines.json  run.py
mapc_research/utils/: __init__.py  copt-example.py
test/: test_scenario.py
test/envs/: test_scenario.py
