[project]
name = "mapc_optimal_research"
version = "0.1.0"
description = "Resources for the article on the optimal solution of the IEEE 802.11 MAPC (C-SR) problem"

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["802.11", "multi-access point coordination", "optimization"]

authors = [
  {name = "Maksymilian Wojnar", email = "maksymilian.wojnar@agh.edu.pl"},
  {name = "Wojciech Ciężobka", email = "wojciech.ciezobka@agh.edu.pl"},
  {name = "Szymon Szott", email = "szymon.szott@agh.edu.pl"},
  {name = "Katarzyna Kosek-Szott", email = "katarzyna.kosek-szott@agh.edu.pl"},
  {name = "Krzysztof Rusek", email = "krzysztof.rusek@agh.edu.pl"},
  {name = "Piotr Chołda", email = "piotr.cholda@agh.edu.pl"}
]

requires-python = ">=3.9"
dependencies = [
  "chex~=0.1.86",
  "jax~=0.4.30",
  "jaxlib~=0.4.30",
  "mapc_mab@git+https://github.com/ml4wifi-devs/mapc-mab",
  "mapc-optimal~=0.1.1",
  "mapc-sim~=0.1.7",
  "matplotlib~=3.9.2",
  "optuna~=3.6.1",
  "seaborn~=0.13.2",
  "scikit-learn~=1.5.2",
  "tqdm~=4.66.5"
]

[tool.setuptools]
packages = ["mapc_research"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
